left overflow fix

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -72,7 +72,7 @@
 	    padding: 0;
 	    margin: 0;
 	    width: 100%;
-	    min-height: 600px;
+	    min-height: 800px;
 	    height: 100%;
 	    text-align: center;
 	    color: #fff;
